# parse-mediawiki-sql

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: category_members.rs  categorylinks.rs  count_pages_by_content_model.rs  count_rows.rs  displaytitles.rs  most_transcluded_namespaces.rs  page_props.rs  random_page.rs  redirects_by_namespace.rs  template_redirects.rs  test.rs
src/: error.rs  field_types.rs  from_sql.rs  lib.rs  schemas.rs  types.rs  utils.rs
