[package]
name = "parse-mediawiki-sql"
version = "0.5.3"
authors = ["Erutuon <5840197+Erutuon@users.noreply.github.com>"]
license = "MIT"
description = "A parser for SQL dumps of a MediaWiki database"
homepage = "https://github.com/Erutuon/parse-mediawiki-sql"
repository = "https://github.com/Erutuon/parse-mediawiki-sql"
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
features = ["serialization", "utils"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "parse_mediawiki_sql"

[dependencies]
bstr = "0.2"
chrono = { version = "0.4", default-features = false, features = ["std"] }
either = "1.6.1"
flate2 = { version = "1.0.20", optional = true }
joinery = "2.0.0"
memmap2 = { version = "0.2", optional = true }
nom = "6.1.2"
ordered-float = "2.5"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1.0.64", optional = true }
thiserror = { version = "1.0.24", optional = true }
unicase = "2.6.0"

[features]
# Can rename this to serde when namespaced features are stabilized:
# https://doc.rust-lang.org/nightly/cargo/reference/unstable.html#namespaced-features
serialization = ["serde", "chrono/serde"]
utils = ["flate2", "memmap2", "serde", "serde_json", "thiserror"]

[dev-dependencies]
anyhow = "1.0.32"
pico-args = "0.4"
smartstring = { version = "0.2.5", features = ["serde"] }
static_assertions = "1.1.0"

[[example]]
name = "categorylinks"
required-features = ["utils"]

[[example]]
name = "category_members"
required-features = ["utils"]

[[example]]
name = "count_pages_by_content_model"
required-features = ["utils"]

[[example]]
name = "count_rows"
required-features = ["utils"]

[[example]]
name = "page_props"
required-features = ["utils"]
# requires serde::Serialize macro

[[example]]
name = "redirects_by_namespace"
required-features = ["utils"]

[[example]]
name = "template_redirects"
required-features = ["utils"]
