[package]
name = "parse-mediawiki-sql"
version = "0.10.0"
authors = ["Erutuon <5840197+Erutuon@users.noreply.github.com>"]
license = "MIT"
description = "A parser for SQL dumps of a MediaWiki database"
homepage = "https://github.com/Erutuon/parse-mediawiki-sql"
repository = "https://github.com/Erutuon/parse-mediawiki-sql"
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
features = ["serialization", "utils"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "parse_mediawiki_sql"

[dependencies]
bstr = "0.2"
chrono = { version = "0.4", default-features = false, features = ["std"] }
either = "1.6.1"
joinery = "2.0.0"
memmap2 = { version = "0.5.0", optional = true }
nom = "7.1.0"
ordered-float = "2.5"
serde = { version = "1", features = ["derive"], optional = true }
thiserror = { version = "1.0.24", optional = true }
mwtitle = { version = "0.1", default-features = false, features = ["utils"], optional = true }
unicase = "2.6.0"

[features]
# Can rename this to serde when namespaced features are stabilized:
# https://doc.rust-lang.org/nightly/cargo/reference/unstable.html#namespaced-features
serialization = ["serde", "chrono/serde"]
utils = ["memmap2", "thiserror", "mwtitle"]

[dev-dependencies]
anyhow = "1.0.32"
pico-args = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.64" }
smartstring = { version = "0.2.5", features = ["serde"] }
static_assertions = "1.1.0"

[[example]]
name = "categorylinks"
required-features = ["utils"]

[[example]]
name = "category_members"
required-features = ["utils"]

[[example]]
name = "count_pages_by_content_model"
required-features = ["utils"]

[[example]]
name = "count_rows"
required-features = ["utils"]

[[example]]
name = "page_props"
required-features = ["utils"]
# requires serde::Serialize macro

[[example]]
name = "random_page"
required-features = ["utils"]

[[example]]
name = "redirects_by_namespace"
required-features = ["utils"]

[[example]]
name = "template_redirects"
required-features = ["utils"]
